@@ -7,6 +7,7 @@ x.x xxxx-xx-xx
  - hitman_hire now has a --mapping argument separate from --input
  - Support for GZIP-compressed input files
  - Support for paired-end amplicon reads
+ - Mapping file is now optional
 
 0.1 2014-03-13
  - Initial version
